--- a/working/templates/heimdall-clean-arch-template-api/src/Heimdall.Api/Heimdall.Api.csproj
+++ b/working/templates/heimdall-clean-arch-template-api/src/Heimdall.Api/Heimdall.Api.csproj
@@ -8,6 +8,16 @@
 
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
+    <PackageReference Include="Cabother.Exceptions" Version="1.0.3" />
+    <PackageReference Include="Cabother.Validations.Helpers" Version="1.0.0" />
+    <PackageReference Include="Cabother.Swagger.UI" Version="1.0.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.4" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.1.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Heimdall.Infrastructure\Heimdall.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
