--- a/working/templates/heimdall-clean-arch-template-api/src/Heimdall.Api/Heimdall.Api.csproj
+++ b/working/templates/heimdall-clean-arch-template-api/src/Heimdall.Api/Heimdall.Api.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="Cabother.Exceptions" Version="1.0.3" />
