--- a/working/templates/heimdall-clean-arch-template-api/src/Heimdall.Infrastructure/Heimdall.Infrastructure.csproj
+++ b/working/templates/heimdall-clean-arch-template-api/src/Heimdall.Infrastructure/Heimdall.Infrastructure.csproj
@@ -6,4 +6,16 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+<ItemGroup>
+  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.2" />
+  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.2">
+    <PrivateAssets>all</PrivateAssets>
+    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+  </PackageReference>
+  <PackageReference Include="Microsoft.EntityFrameworkCore.DynamicLinq" Version="6.2.15" />
+  <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.2" />
+  <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.3" />
+  <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.2-mauipre.1.22054.8" />
+</ItemGroup>
+
 </Project>
