feat: created db entity configuration

--- a/working/templates/heimdall-clean-arch-template-api/src/Heimdall.Api/Heimdall.Api.csproj
+++ b/working/templates/heimdall-clean-arch-template-api/src/Heimdall.Api/Heimdall.Api.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Heimdall.Infrastructure\Heimdall.Infrastructure.csproj" />
+    <ProjectReference Include="..\Heimdall.Infrastructure\Heimdall.Domain.csproj" />
   </ItemGroup>
 
 </Project>
