--- a/working/templates/heimdall-clean-arch-template-api/src/Heimdall.Infrastructure/Heimdall.Infrastructure.csproj
+++ b/working/templates/heimdall-clean-arch-template-api/src/Heimdall.Infrastructure/Heimdall.Infrastructure.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.2" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.2-mauipre.1.22054.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.UnitOfWork" Version="3.1.0" />
   </ItemGroup>
 
   <ItemGroup>
