--- a/working/templates/heimdall-clean-arch-template-api/src/Heimdall.UseCase/Heimdall.UseCase.csproj
+++ b/working/templates/heimdall-clean-arch-template-api/src/Heimdall.UseCase/Heimdall.UseCase.csproj
@@ -5,5 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
+  <ItemGroup>
+        <ProjectReference Include="..\Heimdall.Domain\Heimdall.Domain.csproj" />
+  </ItemGroup>
 </Project>
