feat: implementing use cases

--- a/working/templates/heimdall-clean-arch-template-api/src/Heimdall.UseCase/Heimdall.UseCase.csproj
+++ b/working/templates/heimdall-clean-arch-template-api/src/Heimdall.UseCase/Heimdall.UseCase.csproj
@@ -7,5 +7,6 @@
   </PropertyGroup>
   <ItemGroup>
         <ProjectReference Include="..\Heimdall.Domain\Heimdall.Domain.csproj" />
+        <ProjectReference Include="..\Heimdall.Infrastructure\Heimdall.Infrastructure.csproj" />
   </ItemGroup>
 </Project>
